# vsl-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
docs/: commands.md  tutorial.md  tutorial.sh  tutorial.vsl
examples/: stress_test.rs
src/: accounts.rs  commands.rs  config.rs  configs.rs  execute.rs  lib.rs  main.rs  networks.rs  repl.rs  rpc_client.rs  rpc_server.rs  utils.rs
tests/: batch_commands  command.rs  end_to_end.rs  end_to_end_batch.rs  end_to_end_separate.rs  genesis.json  mockups.rs
