[package]
name = "vsl-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy.workspace = true
anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true
dirs.workspace = true
hex.workspace = true
jsonrpsee.workspace = true
linera-base.workspace = true
log.workspace = true
rand.workspace = true
rustyline = "14.0"
serde.workspace = true
serde_json.workspace = true
shlex = "1.3"
tempdir.workspace = true
tokio.workspace = true
vsl-utils.workspace = true
thiserror.workspace = true
schemars.workspace = true
rustyline-derive = "0.11.0"
regex = "1.11.1"
tempfile.workspace = true

[lib]
name = "vsl_cli"
path = "src/lib.rs"

[[bin]]
name = "vsl-cli"
path = "src/main.rs"
