[package]
name = "vsl-cli"
edition = "2024"
description = "The CLI for managing wallets and interacting with the VSL node"
version.workspace = true
authors.workspace = true
license-file.workspace = true
repository = "https://github.com/Pi-Squared-Inc/vsl"
homepage = "https://pi2.network"
documentation = "https://docs.pi2.network"
publish = false

[dependencies]
vsl-sdk = {  git = "https://github.com/Pi-Squared-Inc/vsl-sdk", rev = "a1c2dd949f05716db4879381322422bea92a2cfa" }

alloy = "0.15.10"
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["cargo", "derive", "env", "string"] }
env_logger = "0.11.8"
dirs = "6.0.0"
hex = "0.4.3"
jsonrpsee = { version = "0.25.1", features = ["http-client", "macros"] }
linera-base = { git = "https://github.com/linera-io/linera-protocol", rev = "57b803201adb7071b3133948522684a980971836", default-features = false, features = ["test"] }
log = "0.4.27"
rand = "0.8.5"
rustyline = "14.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
shlex = "1.3"
tempdir = "0.3.7"
tokio = { version = "1.44.2", features = ["full"] }
thiserror = "2.0.12"
schemars = { version = "0.8.22", features = ["preserve_order"] }
rustyline-derive = "0.11.0"
regex = "1.11.1"
tempfile = "3.20.0"

[lib]
name = "vsl_cli"
path = "src/lib.rs"

[[bin]]
name = "vsl-cli"
path = "src/main.rs"
